<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_work_history"
        android:enabled="true"
        android:icon="@drawable/ic_work_history"
        android:title="@string/menu_work_history"/>

    <item
        android:id="@+id/menu_graphics"
        android:enabled="true"
        android:icon="@drawable/ic_graph"
        android:title="@string/menu_graphics"/>

    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/menu_register"
        android:enabled="true"
        android:icon="@drawable/ic_register"
        android:title="@string/menu_register"/>

    <item
        android:id="@+id/menu_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"/>
</menu>