<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auto_background"
    tools:context=".activitys.FormCadastro">

    <TextView
        android:id="@+id/title_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registration"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/Login_Button"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:layout_marginRight="130dp"
        android:layout_marginLeft="130dp"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>