<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ProfileSettings">

    <View
        android:id="@+id/titlteComponents"
        style="@style/Title_Components"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/titlteComponents"
        app:layout_constraintEnd_toEndOf="@id/titlteComponents"
        app:layout_constraintTop_toTopOf="@id/titlteComponents"
        app:layout_constraintBottom_toBottomOf="@id/titlteComponents">

        <ImageView
            android:id="@+id/ic_settings_start"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/white"
            android:src="@drawable/ic_settings"
            tools:ignore="UseAppTint"/>

        <TextView
            android:id="@+id/title_configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/ic_settings_end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_settings"
            android:tint="@color/white"
            tools:ignore="UseAppTint"/>
    </LinearLayout>


    <TextView
        android:id="@+id/text_alterar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlteComponents"/>

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alterar_senha"/>

    <EditText
        android:id="@+id/novaSenhaEditText"
        style="@style/Edit_Text"
        android:hint="@string/new_password"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"/>

    <EditText
        android:id="@+id/confirmarSenhaEditText"
        style="@style/Edit_Text"
        android:hint="@string/confirm_new_password"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/novaSenhaEditText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_save"
        style="@style/Save_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmarSenhaEditText"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_save"
        android:drawableTint="@color/white" />

    <View
        android:id="@+id/containerComponents2"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"/>

    <TextView
        android:id="@+id/text_excluir_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_delete_account"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/containerComponents2"
        app:layout_constraintEnd_toEndOf="@id/containerComponents2"
        app:layout_constraintTop_toTopOf="@id/containerComponents2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/excluirContaButton"
        style="@style/Save_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_excluir_conta"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/delete_account"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>